--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -573,6 +573,11 @@ div.info { padding-left: 1%; }
     }
 }
 
+// course members
+a.new-member {
+    .icon('after', 'star', 'attention', 8px);
+}
+
 // calculate difference in images and apply filter
 .recolor() {
     filter:
