--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -34,7 +34,7 @@ body {
   font-family: "Lato", sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #000;
+  color: #000000;
 }
 input,
 button,
@@ -288,10 +288,6 @@ td.aufklapp {
 td.angemeldet {
   border: 1px solid #000;
 }
-td.indexpage {
-  background: white url("../images/indexpage.jpg") no-repeat;
-  text-align: left;
-}
 td.nix {
   background-color: transparent;
 }
@@ -388,7 +384,7 @@ td.tree-elbow-end svg {
 }
 .collapsable > .collapsed .toggle-indicator ~ * {
   overflow: hidden;
-  text-indent: 200%;
+  text-indent: -100%;
 }
 * + html .collapsable .collapsed .header-row {
   display: inline-block !important;
@@ -452,25 +448,8 @@ td.tree-elbow-end svg {
 .grey {
   background: #bbb none;
 }
-.lightgrey {
-  background: #f8f8f8 none;
-}
 .white {
   background: #fff none;
-}
-.category_divider {
-  border-top: 1px solid #d0d0d0;
-  background-image: url("../images/background_stripes.jpg");
-}
-.blue_gradient {
-  background-color: #cedbef;
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#b8c6db), color-stop(60%, #cedbef), to(#cedbef));
-  background-image: -webkit-linear-gradient(#b8c6db, #cedbef 60%, #cedbef);
-  background-image: -moz-linear-gradient(top, #b8c6db, #cedbef 60%, #cedbef);
-  background-image: -o-linear-gradient(#b8c6db, #cedbef 60%, #cedbef);
-  background-image: linear-gradient(#b8c6db, #cedbef 60%, #cedbef);
-  background-repeat: no-repeat;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffb8c6db', endColorstr='#ffcedbef', GradientType=0);
 }
 .red_gradient {
   background-color: #e8b6b9;
@@ -680,15 +659,15 @@ table.tree td.blank {
   border: 0;
 }
 table.tree td.in-between {
-  background: #fff url("../images/tree-line.gif") center repeat-y;
+  background: #ffffff url("../images/tree-line.gif") center repeat-y;
   border: 0;
 }
 table.tree td.leaf {
-  background: #fff url("../images/tree-leaf.gif") center no-repeat;
+  background: #ffffff url("../images/tree-leaf.gif") center no-repeat;
   border: 0;
 }
 table.tree td.end {
-  background: #fff url("../images/tree-end.gif") center no-repeat;
+  background: #ffffff url("../images/tree-end.gif") center no-repeat;
   border: 0;
 }
 table.tree .centered {
@@ -1357,15 +1336,6 @@ form.default.inline button {
   background-color: #dfe2e9;
   border-left: 1px solid #ccc;
 }
-.content_title_yellow {
-  background-image: url("../images/plastic_yellow.jpg");
-}
-.content_title_green {
-  background-image: url("../images/plastic_green.jpg");
-}
-.content_title_red {
-  background-image: url("../images/plastic_red.jpg");
-}
 .content_seperator,
 .content_seperator td {
   background-color: #adadad;
@@ -1572,8 +1542,8 @@ form.default.inline button {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   overflow: auto;
-  background: linear-gradient(90deg, white 30%, rgba(255, 255, 255, 0)), linear-gradient(90deg, rgba(255, 255, 255, 0), white 70%) 100% 0, /* Shadows */ radial-gradient(0 50%, farthest-side, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), radial-gradient(100% 50%, farthest-side, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)) 100% 0;
-  background: linear-gradient(90deg, white 30%, rgba(255, 255, 255, 0)), linear-gradient(90deg, rgba(255, 255, 255, 0), white 70%) 100% 0, /* Shadows */ radial-gradient(farthest-side at 0 50%, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), radial-gradient(farthest-side at 100% 50%, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)) 100% 0;
+  background: linear-gradient(90deg, white 30%, rgba(255, 255, 255, 0)), linear-gradient(90deg, rgba(255, 255, 255, 0), white 70%) 100% 0, radial-gradient(0 50%, farthest-side, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), radial-gradient(100% 50%, farthest-side, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)) 100% 0;
+  background: linear-gradient(90deg, white 30%, rgba(255, 255, 255, 0)), linear-gradient(90deg, rgba(255, 255, 255, 0), white 70%) 100% 0, radial-gradient(farthest-side at 0 50%, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), radial-gradient(farthest-side at 100% 50%, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)) 100% 0;
   background-repeat: no-repeat;
   background-size: 40px 100%, 40px 100%, 14px 100%, 14px 100%;
   /* Opera doesn't support this in the shorthand */
@@ -1993,7 +1963,7 @@ form.default.inline button {
   width: 0;
   position: absolute;
   pointer-events: none;
-  border-bottom-color: #eee;
+  border-bottom-color: #eeeeee;
   bottom: 100%;
   left: 50%;
   margin-left: -10px;
@@ -3562,21 +3532,21 @@ div.messagebox_details {
   overflow: hidden;
 }
 div.messagebox_info {
-  color: #000;
+  color: #000000;
   background-color: white;
   background-image: url("../images/messagebox/info.png");
   background-size: 32px 32px;
   border-color: #28497c;
 }
 div.messagebox_success {
-  color: #000;
+  color: #000000;
   background-color: white;
   background-image: url("../images/messagebox/success.png");
   background-size: 32px 32px;
   border-color: #008512;
 }
 div.messagebox_error {
-  color: #000;
+  color: #000000;
   background-color: white;
   background-image: url("../images/messagebox/error.png");
   background-size: 32px 32px;
@@ -3981,7 +3951,7 @@ div.clear {
   width: 0;
   position: absolute;
   pointer-events: none;
-  border-top-color: #ccc;
+  border-top-color: #cccccc;
   top: 100%;
   left: 50%;
   margin-left: -9px;
@@ -3993,7 +3963,7 @@ div.clear {
   width: 0;
   position: absolute;
   pointer-events: none;
-  border-top-color: #ddd;
+  border-top-color: #dddddd;
   top: 100%;
   left: 50%;
   margin-left: -8px;
@@ -4075,7 +4045,7 @@ div.clear {
   width: 0;
   position: absolute;
   pointer-events: none;
-  border-top-color: #ccc;
+  border-top-color: #cccccc;
   top: 100%;
   left: 50%;
   margin-left: -9px;
@@ -4087,7 +4057,7 @@ div.clear {
   width: 0;
   position: absolute;
   pointer-events: none;
-  border-top-color: #ddd;
+  border-top-color: #dddddd;
   top: 100%;
   left: 50%;
   margin-left: -8px;
@@ -4224,11 +4194,11 @@ div.clear {
 }
 .js .drag-and-drop.hovered {
   background-color: #fff8e0;
-  background-image: -moz-linear-gradient(top, #ffe, #fec);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffe), to(#fec));
-  background-image: -webkit-linear-gradient(top, #ffe, #fec);
-  background-image: -o-linear-gradient(top, #ffe, #fec);
-  background-image: linear-gradient(to bottom, #ffe, #fec);
+  background-image: -moz-linear-gradient(top, #ffffee, #ffeecc);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffee), to(#ffeecc));
+  background-image: -webkit-linear-gradient(top, #ffffee, #ffeecc);
+  background-image: -o-linear-gradient(top, #ffffee, #ffeecc);
+  background-image: linear-gradient(to bottom, #ffffee, #ffeecc);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffee', endColorstr='#ffffeecc', GradientType=0);
   border-radius: 1em;
@@ -4546,7 +4516,7 @@ table.calendar-week tbody tr td.calendar-category2,
 table.calendar-day tbody tr td.calendar-category2,
 table.calendar-week tbody tr td.calendar-course-category1,
 table.calendar-day tbody tr td.calendar-course-category1 {
-  background: linear-gradient(to right, #3E4490, #7379A9) repeat-x #3E4490;
+  background: linear-gradient(to right, #3e4490, #7379a9) repeat-x #3e4490;
   border: solid 1px #682c8b;
   vertical-align: top;
   font-size: 11px;
@@ -4564,7 +4534,7 @@ table.calendar-week tbody tr td.calendar-category3,
 table.calendar-day tbody tr td.calendar-category3,
 table.calendar-week tbody tr td.calendar-course-category2,
 table.calendar-day tbody tr td.calendar-course-category2 {
-  background: linear-gradient(to right, #874293, #AE77B8) repeat-x #874293;
+  background: linear-gradient(to right, #874293, #ae77b8) repeat-x #874293;
   border: solid 1px #b02e7c;
   vertical-align: top;
   font-size: 11px;
@@ -4582,7 +4552,7 @@ table.calendar-week tbody tr td.calendar-category4,
 table.calendar-day tbody tr td.calendar-category4,
 table.calendar-week tbody tr td.calendar-course-category3,
 table.calendar-day tbody tr td.calendar-course-category3 {
-  background: linear-gradient(to right, #8FAD29, #A3BA50) repeat-x #8FAD29;
+  background: linear-gradient(to right, #8fad29, #a3ba50) repeat-x #8fad29;
   border: solid 1px #129c94;
   vertical-align: top;
   font-size: 11px;
@@ -4600,7 +4570,7 @@ table.calendar-week tbody tr td.calendar-category5,
 table.calendar-day tbody tr td.calendar-category5,
 table.calendar-week tbody tr td.calendar-course-category4,
 table.calendar-day tbody tr td.calendar-course-category4 {
-  background: linear-gradient(to right, #8E8EB2, #BABAD4) repeat-x #8E8EB2;
+  background: linear-gradient(to right, #8e8eb2, #babad4) repeat-x #8e8eb2;
   border: solid 1px #f26e00;
   vertical-align: top;
   font-size: 11px;
@@ -4618,7 +4588,7 @@ table.calendar-week tbody tr td.calendar-category6,
 table.calendar-day tbody tr td.calendar-category6,
 table.calendar-week tbody tr td.calendar-course-category6,
 table.calendar-day tbody tr td.calendar-course-category6 {
-  background: linear-gradient(to right, #904E42, #B5867E) repeat-x #904E42;
+  background: linear-gradient(to right, #904e42, #b5867e) repeat-x #904e42;
   border: solid 1px #a85d45;
   vertical-align: top;
   font-size: 11px;
@@ -4634,7 +4604,7 @@ table.calendar-day tbody tr td.calendar-course-category6 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-category7,
 table.calendar-day tbody tr td.calendar-category7 {
-  background: linear-gradient(to right, #AB9448, #C9B988) repeat-x #AB9448;
+  background: linear-gradient(to right, #ab9448, #c9b988) repeat-x #ab9448;
   border: solid 1px #6ead10;
   vertical-align: top;
   font-size: 11px;
@@ -4648,7 +4618,7 @@ table.calendar-day tbody tr td.calendar-category7 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-category8,
 table.calendar-day tbody tr td.calendar-category8 {
-  background: linear-gradient(to right, #6D9441, #9DB97C) repeat-x #6D9441;
+  background: linear-gradient(to right, #6d9441, #9db97c) repeat-x #6d9441;
   border: solid 1px #d60000;
   vertical-align: top;
   font-size: 11px;
@@ -4662,7 +4632,7 @@ table.calendar-day tbody tr td.calendar-category8 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-category9,
 table.calendar-day tbody tr td.calendar-category9 {
-  background: linear-gradient(to right, #EBC443, #ECD379) repeat-x #EBC443;
+  background: linear-gradient(to right, #ebc443, #ecd379) repeat-x #ebc443;
   border: solid 1px #ffbd33;
   vertical-align: top;
   font-size: 11px;
@@ -4676,7 +4646,7 @@ table.calendar-day tbody tr td.calendar-category9 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-category10,
 table.calendar-day tbody tr td.calendar-category10 {
-  background: linear-gradient(to right, #DB9F63, #E9B583) repeat-x #DB9F63;
+  background: linear-gradient(to right, #db9f63, #e9b583) repeat-x #db9f63;
   border: solid 1px #66b671;
   vertical-align: top;
   font-size: 11px;
@@ -4690,7 +4660,7 @@ table.calendar-day tbody tr td.calendar-category10 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-category11,
 table.calendar-day tbody tr td.calendar-category11 {
-  background: linear-gradient(to right, #90D070, #A6D98C) repeat-x #90D070;
+  background: linear-gradient(to right, #90d070, #a6d98c) repeat-x #90d070;
   border: solid 1px #a480b9;
   vertical-align: top;
   font-size: 11px;
@@ -4704,7 +4674,7 @@ table.calendar-day tbody tr td.calendar-category11 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-category12,
 table.calendar-day tbody tr td.calendar-category12 {
-  background: linear-gradient(to right, #418494, #6CA6B2) repeat-x #418494;
+  background: linear-gradient(to right, #418494, #6ca6b2) repeat-x #418494;
   border: solid 1px #d082b0;
   vertical-align: top;
   font-size: 11px;
@@ -4782,7 +4752,7 @@ table.calendar-day tbody tr td.calendar-course-category255 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-course-category256,
 table.calendar-day tbody tr td.calendar-course-category256 {
-  background: linear-gradient(to right, #3E4490, #7379A9) repeat-x #3E4490;
+  background: linear-gradient(to right, #3e4490, #7379a9) repeat-x #3e4490;
   border: solid 1px #2D2C64;
   vertical-align: top;
   font-size: 11px;
@@ -4855,7 +4825,7 @@ a.Calendar-course-event-text255 {
   font-size: 0.8em;
 }
 .calendar-group-events {
-  background: linear-gradient(to right, #8E8EB2, #BABAD4) repeat-x #8E8EB2;
+  background: linear-gradient(to right, #8e8eb2, #babad4) repeat-x #8e8eb2;
   border: solid 1px #505064;
 }
 #exc-dates {
@@ -7022,9 +6992,9 @@ div#studyareas {
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   border-radius: 20px;
-  -webkit-box-shadow: 0 -1px 4px rgba(214, 0, 0, 0.1), 0 2px 5px #888;
-  -moz-box-shadow: 0 -1px 4px rgba(214, 0, 0, 0.1), 0 2px 5px #888;
-  box-shadow: 0 -1px 4px rgba(214, 0, 0, 0.1), 0 2px 5px #888;
+  -webkit-box-shadow: 0 -1px 4px rgba(214, 0, 0, 0.1), 0 2px 5px #888888;
+  -moz-box-shadow: 0 -1px 4px rgba(214, 0, 0, 0.1), 0 2px 5px #888888;
+  box-shadow: 0 -1px 4px rgba(214, 0, 0, 0.1), 0 2px 5px #888888;
 }
 .smiley-picker .navigation {
   border-collapse: collapse;
