--- a/public/plugins_packages/core/Forum/stylesheets/forum.less
+++ b/public/plugins_packages/core/Forum/stylesheets/forum.less
@@ -185,7 +185,7 @@ html.no-js #forum {
         margin: 0 0 0.75em 0;
         padding: 0;
         background-color: @forum_light;
-
+        display: flex;
         a {
             word-break: break-all;
         }
@@ -206,8 +206,7 @@ html.no-js #forum {
         position: relative;
         padding: 0pt 5px;
         margin: 5px 0 0 0;
-        width: 78%;
-        float: left;
+        flex: 1;
         text-align: left;
     }
 
@@ -251,13 +250,14 @@ html.no-js #forum {
     }
 
     .postprofile {
+        @media only screen and (max-width: 768px) {
+            display: none !important;
+        }
         border-left: 1px solid #ffffff;
-        display: inline;
-        float: right;
-        min-height: 80px;
-        width: 18%;
-        margin: 5px 0 0 0;
-        padding: 0pt 0pt 0pt 8px;
+        margin: 0;
+        padding: 4px;
+        height: 100%;
+        width: 180px;
         dd, dt {
             padding: 0pt;
             margin: 0pt;
