--- a/public/plugins_packages/core/Forum/stylesheets/forum.less
+++ b/public/plugins_packages/core/Forum/stylesheets/forum.less
@@ -176,10 +176,6 @@ html.no-js #forum {
         width: 70%;
     }
 
-    .cite_box {
-        margin: 0 4em;
-    }
-
     .posting {
         height: 100%;
         margin: 0 0 0.75em 0;
@@ -247,6 +243,13 @@ html.no-js #forum {
 
     span.username {
         font-weight: bold;
+    }
+
+    div#new_entry_box div.posting {
+        display: inline;
+        .postprofile {
+            display: none;
+        }
     }
 
     .postprofile {
