--- a/public/plugins_packages/core/Forum/stylesheets/forum.less
+++ b/public/plugins_packages/core/Forum/stylesheets/forum.less
@@ -246,9 +246,9 @@ html.no-js #forum {
     }
 
     div#new_entry_box div.posting {
-        display: inline;
-        .postprofile {
-            display: none;
+        flex-wrap: wrap;
+        .postbody:first-child {
+            flex: 0
         }
     }
 
