add i18n prototype v2 (dev-branches/i18n-2)

--- a/public/assets/stylesheets/less/forms.less
+++ b/public/assets/stylesheets/less/forms.less
@@ -252,3 +252,8 @@ form.default {
         .icon('before', 'checkbox-checked', 'clickable', 16, 5px);
     }
 }
+
+input.i18n, textarea.i18n {
+    background-position: right 8px center;
+    background-repeat: no-repeat;
+}
