show group titles in my courses again, fixes #6491, re #6461

--- a/public/assets/stylesheets/less/tables.less
+++ b/public/assets/stylesheets/less/tables.less
@@ -153,6 +153,15 @@ td.tree-elbow-line, td.tree-elbow-end {
 }
 * + html .collapsable .collapsed .header-row { display: inline-block !important; } // IE-Hack
 
+/* Special treatment for group headers under my courses */
+/* -> see https://develop.studip.de/trac/ticket/6491    */
+.mycourses {
+    > .collapsed {
+        .toggle-indicator ~ * {
+            text-indent: 0;
+        }
+    }
+}
 /* --- Table details -------------------------------------------------------- */
 .loaded-details {
     > td { padding: 0 20px 5px 20px !important; }
