--- a/public/assets/stylesheets/less/tables.less
+++ b/public/assets/stylesheets/less/tables.less
@@ -155,13 +155,13 @@ td.tree-elbow-line, td.tree-elbow-end {
 
 /* Special treatment for group headers under my courses */
 /* -> see https://develop.studip.de/trac/ticket/6491    */
-.mycourses {
-    > .collapsed {
-        .toggle-indicator ~ * {
-            text-indent: 0;
-        }
-    }
-}
+// .mycourses {
+//     > .collapsed {
+//         .toggle-indicator ~ * {
+//             text-indent: 0;
+//         }
+//     }
+// }
 /* --- Table details -------------------------------------------------------- */
 .loaded-details {
     > td { padding: 0 20px 5px 20px !important; }
