notifications: let the notification box expand to the left to avoid having it grow over the right screen edge, make it smaller in responsive mode, fixes #6493

--- a/public/assets/stylesheets/less/header.less
+++ b/public/assets/stylesheets/less/header.less
@@ -157,9 +157,9 @@
 
         // Positions: below or left'ish or right'ish to the triggering element
         &.below {
-            left: (-@width / 2 + 9);
+            left: (-@width + @arrow-height * 2);
             &:before {
-                left: 50%;
+                left: (@width - @arrow-height - 2);
             }
         }
         &.left {
