--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -34,7 +34,7 @@ body {
   font-family: "Lato", sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #000000;
+  color: #000;
 }
 input,
 button,
@@ -661,15 +661,15 @@ table.tree td.blank {
   border: 0;
 }
 table.tree td.in-between {
-  background: #ffffff url("../images/tree-line.gif") center repeat-y;
+  background: #fff url("../images/tree-line.gif") center repeat-y;
   border: 0;
 }
 table.tree td.leaf {
-  background: #ffffff url("../images/tree-leaf.gif") center no-repeat;
+  background: #fff url("../images/tree-leaf.gif") center no-repeat;
   border: 0;
 }
 table.tree td.end {
-  background: #ffffff url("../images/tree-end.gif") center no-repeat;
+  background: #fff url("../images/tree-end.gif") center no-repeat;
   border: 0;
 }
 table.tree .centered {
@@ -1544,8 +1544,8 @@ form.default.inline button {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   overflow: auto;
-  background: linear-gradient(90deg, white 30%, rgba(255, 255, 255, 0)), linear-gradient(90deg, rgba(255, 255, 255, 0), white 70%) 100% 0, radial-gradient(0 50%, farthest-side, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), radial-gradient(100% 50%, farthest-side, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)) 100% 0;
-  background: linear-gradient(90deg, white 30%, rgba(255, 255, 255, 0)), linear-gradient(90deg, rgba(255, 255, 255, 0), white 70%) 100% 0, radial-gradient(farthest-side at 0 50%, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), radial-gradient(farthest-side at 100% 50%, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)) 100% 0;
+  background: linear-gradient(90deg, white 30%, rgba(255, 255, 255, 0)), linear-gradient(90deg, rgba(255, 255, 255, 0), white 70%) 100% 0, /* Shadows */ radial-gradient(0 50%, farthest-side, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), radial-gradient(100% 50%, farthest-side, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)) 100% 0;
+  background: linear-gradient(90deg, white 30%, rgba(255, 255, 255, 0)), linear-gradient(90deg, rgba(255, 255, 255, 0), white 70%) 100% 0, /* Shadows */ radial-gradient(farthest-side at 0 50%, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), radial-gradient(farthest-side at 100% 50%, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)) 100% 0;
   background-repeat: no-repeat;
   background-size: 40px 100%, 40px 100%, 14px 100%, 14px 100%;
   /* Opera doesn't support this in the shorthand */
@@ -1965,7 +1965,7 @@ form.default.inline button {
   width: 0;
   position: absolute;
   pointer-events: none;
-  border-bottom-color: #eeeeee;
+  border-bottom-color: #eee;
   bottom: 100%;
   left: 50%;
   margin-left: -10px;
@@ -1981,10 +1981,10 @@ form.default.inline button {
   opacity: 0;
 }
 #barBottomright .list.below {
-  left: -191px;
+  left: -380px;
 }
 #barBottomright .list.below:before {
-  left: 50%;
+  left: 388px;
 }
 #barBottomright .list.left {
   right: 0px;
@@ -3534,21 +3534,21 @@ div.messagebox_details {
   overflow: hidden;
 }
 div.messagebox_info {
-  color: #000000;
+  color: #000;
   background-color: white;
   background-image: url("../images/messagebox/info.png");
   background-size: 32px 32px;
   border-color: #28497c;
 }
 div.messagebox_success {
-  color: #000000;
+  color: #000;
   background-color: white;
   background-image: url("../images/messagebox/success.png");
   background-size: 32px 32px;
   border-color: #008512;
 }
 div.messagebox_error {
-  color: #000000;
+  color: #000;
   background-color: white;
   background-image: url("../images/messagebox/error.png");
   background-size: 32px 32px;
@@ -3953,7 +3953,7 @@ div.clear {
   width: 0;
   position: absolute;
   pointer-events: none;
-  border-top-color: #cccccc;
+  border-top-color: #ccc;
   top: 100%;
   left: 50%;
   margin-left: -9px;
@@ -3965,7 +3965,7 @@ div.clear {
   width: 0;
   position: absolute;
   pointer-events: none;
-  border-top-color: #dddddd;
+  border-top-color: #ddd;
   top: 100%;
   left: 50%;
   margin-left: -8px;
@@ -4047,7 +4047,7 @@ div.clear {
   width: 0;
   position: absolute;
   pointer-events: none;
-  border-top-color: #cccccc;
+  border-top-color: #ccc;
   top: 100%;
   left: 50%;
   margin-left: -9px;
@@ -4059,7 +4059,7 @@ div.clear {
   width: 0;
   position: absolute;
   pointer-events: none;
-  border-top-color: #dddddd;
+  border-top-color: #ddd;
   top: 100%;
   left: 50%;
   margin-left: -8px;
@@ -4196,11 +4196,11 @@ div.clear {
 }
 .js .drag-and-drop.hovered {
   background-color: #fff8e0;
-  background-image: -moz-linear-gradient(top, #ffffee, #ffeecc);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffee), to(#ffeecc));
-  background-image: -webkit-linear-gradient(top, #ffffee, #ffeecc);
-  background-image: -o-linear-gradient(top, #ffffee, #ffeecc);
-  background-image: linear-gradient(to bottom, #ffffee, #ffeecc);
+  background-image: -moz-linear-gradient(top, #ffe, #fec);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffe), to(#fec));
+  background-image: -webkit-linear-gradient(top, #ffe, #fec);
+  background-image: -o-linear-gradient(top, #ffe, #fec);
+  background-image: linear-gradient(to bottom, #ffe, #fec);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffee', endColorstr='#ffffeecc', GradientType=0);
   border-radius: 1em;
@@ -4518,7 +4518,7 @@ table.calendar-week tbody tr td.calendar-category2,
 table.calendar-day tbody tr td.calendar-category2,
 table.calendar-week tbody tr td.calendar-course-category1,
 table.calendar-day tbody tr td.calendar-course-category1 {
-  background: linear-gradient(to right, #3e4490, #7379a9) repeat-x #3e4490;
+  background: linear-gradient(to right, #3E4490, #7379A9) repeat-x #3E4490;
   border: solid 1px #682c8b;
   vertical-align: top;
   font-size: 11px;
@@ -4536,7 +4536,7 @@ table.calendar-week tbody tr td.calendar-category3,
 table.calendar-day tbody tr td.calendar-category3,
 table.calendar-week tbody tr td.calendar-course-category2,
 table.calendar-day tbody tr td.calendar-course-category2 {
-  background: linear-gradient(to right, #874293, #ae77b8) repeat-x #874293;
+  background: linear-gradient(to right, #874293, #AE77B8) repeat-x #874293;
   border: solid 1px #b02e7c;
   vertical-align: top;
   font-size: 11px;
@@ -4554,7 +4554,7 @@ table.calendar-week tbody tr td.calendar-category4,
 table.calendar-day tbody tr td.calendar-category4,
 table.calendar-week tbody tr td.calendar-course-category3,
 table.calendar-day tbody tr td.calendar-course-category3 {
-  background: linear-gradient(to right, #8fad29, #a3ba50) repeat-x #8fad29;
+  background: linear-gradient(to right, #8FAD29, #A3BA50) repeat-x #8FAD29;
   border: solid 1px #129c94;
   vertical-align: top;
   font-size: 11px;
@@ -4572,7 +4572,7 @@ table.calendar-week tbody tr td.calendar-category5,
 table.calendar-day tbody tr td.calendar-category5,
 table.calendar-week tbody tr td.calendar-course-category4,
 table.calendar-day tbody tr td.calendar-course-category4 {
-  background: linear-gradient(to right, #8e8eb2, #babad4) repeat-x #8e8eb2;
+  background: linear-gradient(to right, #8E8EB2, #BABAD4) repeat-x #8E8EB2;
   border: solid 1px #f26e00;
   vertical-align: top;
   font-size: 11px;
@@ -4590,7 +4590,7 @@ table.calendar-week tbody tr td.calendar-category6,
 table.calendar-day tbody tr td.calendar-category6,
 table.calendar-week tbody tr td.calendar-course-category6,
 table.calendar-day tbody tr td.calendar-course-category6 {
-  background: linear-gradient(to right, #904e42, #b5867e) repeat-x #904e42;
+  background: linear-gradient(to right, #904E42, #B5867E) repeat-x #904E42;
   border: solid 1px #a85d45;
   vertical-align: top;
   font-size: 11px;
@@ -4606,7 +4606,7 @@ table.calendar-day tbody tr td.calendar-course-category6 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-category7,
 table.calendar-day tbody tr td.calendar-category7 {
-  background: linear-gradient(to right, #ab9448, #c9b988) repeat-x #ab9448;
+  background: linear-gradient(to right, #AB9448, #C9B988) repeat-x #AB9448;
   border: solid 1px #6ead10;
   vertical-align: top;
   font-size: 11px;
@@ -4620,7 +4620,7 @@ table.calendar-day tbody tr td.calendar-category7 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-category8,
 table.calendar-day tbody tr td.calendar-category8 {
-  background: linear-gradient(to right, #6d9441, #9db97c) repeat-x #6d9441;
+  background: linear-gradient(to right, #6D9441, #9DB97C) repeat-x #6D9441;
   border: solid 1px #d60000;
   vertical-align: top;
   font-size: 11px;
@@ -4634,7 +4634,7 @@ table.calendar-day tbody tr td.calendar-category8 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-category9,
 table.calendar-day tbody tr td.calendar-category9 {
-  background: linear-gradient(to right, #ebc443, #ecd379) repeat-x #ebc443;
+  background: linear-gradient(to right, #EBC443, #ECD379) repeat-x #EBC443;
   border: solid 1px #ffbd33;
   vertical-align: top;
   font-size: 11px;
@@ -4648,7 +4648,7 @@ table.calendar-day tbody tr td.calendar-category9 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-category10,
 table.calendar-day tbody tr td.calendar-category10 {
-  background: linear-gradient(to right, #db9f63, #e9b583) repeat-x #db9f63;
+  background: linear-gradient(to right, #DB9F63, #E9B583) repeat-x #DB9F63;
   border: solid 1px #66b671;
   vertical-align: top;
   font-size: 11px;
@@ -4662,7 +4662,7 @@ table.calendar-day tbody tr td.calendar-category10 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-category11,
 table.calendar-day tbody tr td.calendar-category11 {
-  background: linear-gradient(to right, #90d070, #a6d98c) repeat-x #90d070;
+  background: linear-gradient(to right, #90D070, #A6D98C) repeat-x #90D070;
   border: solid 1px #a480b9;
   vertical-align: top;
   font-size: 11px;
@@ -4676,7 +4676,7 @@ table.calendar-day tbody tr td.calendar-category11 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-category12,
 table.calendar-day tbody tr td.calendar-category12 {
-  background: linear-gradient(to right, #418494, #6ca6b2) repeat-x #418494;
+  background: linear-gradient(to right, #418494, #6CA6B2) repeat-x #418494;
   border: solid 1px #d082b0;
   vertical-align: top;
   font-size: 11px;
@@ -4754,7 +4754,7 @@ table.calendar-day tbody tr td.calendar-course-category255 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-course-category256,
 table.calendar-day tbody tr td.calendar-course-category256 {
-  background: linear-gradient(to right, #3e4490, #7379a9) repeat-x #3e4490;
+  background: linear-gradient(to right, #3E4490, #7379A9) repeat-x #3E4490;
   border: solid 1px #2D2C64;
   vertical-align: top;
   font-size: 11px;
@@ -4827,7 +4827,7 @@ a.Calendar-course-event-text255 {
   font-size: 0.8em;
 }
 .calendar-group-events {
-  background: linear-gradient(to right, #8e8eb2, #babad4) repeat-x #8e8eb2;
+  background: linear-gradient(to right, #8E8EB2, #BABAD4) repeat-x #8E8EB2;
   border: solid 1px #505064;
 }
 #exc-dates {
@@ -6994,9 +6994,9 @@ div#studyareas {
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   border-radius: 20px;
-  -webkit-box-shadow: 0 -1px 4px rgba(214, 0, 0, 0.1), 0 2px 5px #888888;
-  -moz-box-shadow: 0 -1px 4px rgba(214, 0, 0, 0.1), 0 2px 5px #888888;
-  box-shadow: 0 -1px 4px rgba(214, 0, 0, 0.1), 0 2px 5px #888888;
+  -webkit-box-shadow: 0 -1px 4px rgba(214, 0, 0, 0.1), 0 2px 5px #888;
+  -moz-box-shadow: 0 -1px 4px rgba(214, 0, 0, 0.1), 0 2px 5px #888;
+  box-shadow: 0 -1px 4px rgba(214, 0, 0, 0.1), 0 2px 5px #888;
 }
 .smiley-picker .navigation {
   border-collapse: collapse;
@@ -7310,6 +7310,17 @@ label[for="responsive-toggle"]:before {
   }
   #barBottomright #sidebar-menu {
     display: inline-block;
+  }
+  #barBottomright .list {
+    margin-top: 2px;
+    width: 300px;
+    max-width: 300px;
+  }
+  #barBottomright .list.below {
+    left: -280px;
+  }
+  #barBottomright .list.below:before {
+    left: 288px;
   }
   #responsive-container {
     display: block;
