--- a/public/assets/stylesheets/less/quicksearch.less
+++ b/public/assets/stylesheets/less/quicksearch.less
@@ -53,7 +53,7 @@ input.quicksearchbox {
         max-height: 275px;
         overflow-y: auto;
         overflow-x: hidden;
-        z-index: 2;
+        z-index: 99999;
     }
 
     .ui-menu-item {
@@ -72,4 +72,7 @@ input.quicksearchbox {
     margin-right: 10px;
     padding: 0;
     vertical-align: text-bottom;
+}
+.ui-autocomplete {
+    z-index: 99999;
 }
