revert [38010] to restore WYSIWG editor functionality

--- a/public/plugins_packages/core/Forum/stylesheets/forum.less
+++ b/public/plugins_packages/core/Forum/stylesheets/forum.less
@@ -204,9 +204,6 @@ html.no-js #forum {
         margin: 5px 0 0 0;
         flex: 1;
         text-align: left;
-        &.forum_entry_input {
-            display: flex;
-        }
     }
 
     .buttons {
@@ -249,9 +246,8 @@ html.no-js #forum {
     }
 
     div#new_entry_box div.posting {
-        display: flex;
-        flex-direction: column;
-        .postprofile {
+        flex-wrap: wrap;
+        .postbody:first-child {
             flex: 0
         }
     }
