fix url in documents provider

--- a/public/plugins_packages/core/ActivityFeed/css/style.less
+++ b/public/plugins_packages/core/ActivityFeed/css/style.less
@@ -1,8 +1,10 @@
+// out: style.css
+
 #stream-container {
     padding: 5px;
     margin: 5px;
     max-height: 800px;
-    overflow-y: scroll;
+    overflow-y: auto;
 
     .activity {
         border: 1px solid #d0d7e3;
