pagination: use svg icons, fixes #6559

--- a/public/assets/stylesheets/less/pagination.less
+++ b/public/assets/stylesheets/less/pagination.less
@@ -31,9 +31,9 @@
         vertical-align: top;
     }
     .prev a {
-        background-image: url("@{icon-path}/blue/arr_1left.png")
+        .background-icon('arr_1left', 'clickable');
     }
     .next a {
-        background-image: url("@{icon-path}/blue/arr_1right.png")
+        .background-icon('arr_1right', 'clickable');
     }
 }
