--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -34,7 +34,7 @@ body {
   font-family: "Lato", sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #000;
+  color: #000000;
 }
 input,
 button,
@@ -661,15 +661,15 @@ table.tree td.blank {
   border: 0;
 }
 table.tree td.in-between {
-  background: #fff url("../images/tree-line.gif") center repeat-y;
+  background: #ffffff url("../images/tree-line.gif") center repeat-y;
   border: 0;
 }
 table.tree td.leaf {
-  background: #fff url("../images/tree-leaf.gif") center no-repeat;
+  background: #ffffff url("../images/tree-leaf.gif") center no-repeat;
   border: 0;
 }
 table.tree td.end {
-  background: #fff url("../images/tree-end.gif") center no-repeat;
+  background: #ffffff url("../images/tree-end.gif") center no-repeat;
   border: 0;
 }
 table.tree .centered {
@@ -1544,8 +1544,8 @@ form.default.inline button {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   overflow: auto;
-  background: linear-gradient(90deg, white 30%, rgba(255, 255, 255, 0)), linear-gradient(90deg, rgba(255, 255, 255, 0), white 70%) 100% 0, /* Shadows */ radial-gradient(0 50%, farthest-side, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), radial-gradient(100% 50%, farthest-side, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)) 100% 0;
-  background: linear-gradient(90deg, white 30%, rgba(255, 255, 255, 0)), linear-gradient(90deg, rgba(255, 255, 255, 0), white 70%) 100% 0, /* Shadows */ radial-gradient(farthest-side at 0 50%, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), radial-gradient(farthest-side at 100% 50%, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)) 100% 0;
+  background: linear-gradient(90deg, white 30%, rgba(255, 255, 255, 0)), linear-gradient(90deg, rgba(255, 255, 255, 0), white 70%) 100% 0, radial-gradient(0 50%, farthest-side, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), radial-gradient(100% 50%, farthest-side, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)) 100% 0;
+  background: linear-gradient(90deg, white 30%, rgba(255, 255, 255, 0)), linear-gradient(90deg, rgba(255, 255, 255, 0), white 70%) 100% 0, radial-gradient(farthest-side at 0 50%, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), radial-gradient(farthest-side at 100% 50%, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)) 100% 0;
   background-repeat: no-repeat;
   background-size: 40px 100%, 40px 100%, 14px 100%, 14px 100%;
   /* Opera doesn't support this in the shorthand */
@@ -1965,7 +1965,7 @@ form.default.inline button {
   width: 0;
   position: absolute;
   pointer-events: none;
-  border-bottom-color: #eee;
+  border-bottom-color: #eeeeee;
   bottom: 100%;
   left: 50%;
   margin-left: -10px;
@@ -2953,11 +2953,6 @@ section.contentbox header {
   padding: 2px;
   background-color: #e7ebf1;
 }
-section.contentbox header h1,
-section.contentbox header nav {
-  -webkit-flex-grow: 1;
-  flex-grow: 1;
-}
 section.contentbox header h1 {
   padding: 5px;
   margin: 0;
@@ -2967,19 +2962,13 @@ section.contentbox header h1 {
 }
 section.contentbox header h1 > a img,
 section.contentbox header h1 > a svg {
-  vertical-align: text-bottom;
   margin-right: 5px;
 }
 section.contentbox header nav {
-  vertical-align: text-top;
-  padding: 2px 5px 0 5px;
   text-align: right;
-  line-height: inherit;
-}
-section.contentbox header nav * {
-  padding: 3px;
-  padding-left: 2px;
-  padding-right: 0px;
+  padding: 2px;
+  display: flex;
+  align-items: center;
 }
 section.contentbox footer {
   text-align: center;
@@ -3051,6 +3040,10 @@ section.contentbox > article section article time {
   font-size: smaller;
   margin: 2px;
 }
+section.contentbox > article header h1 a {
+  display: flex;
+  align-items: center;
+}
 section.contentbox > article header h1 a::before {
   background-repeat: no-repeat;
   content: ' ';
@@ -3070,7 +3063,7 @@ section.contentbox > article header h1 a:before {
   -moz-transition: all 200ms ease 0s;
   -o-transition: all 200ms ease 0s;
   transition: all 200ms ease 0s;
-  margin-top: 2px;
+  margin-right: 2px;
 }
 section.contentbox > article header nav * {
   display: inline-block;
@@ -3084,6 +3077,11 @@ section.contentbox > article header nav span {
 section.contentbox > article header nav span:last-child {
   border-right: none;
   padding-right: 0px;
+}
+section.contentbox > article header nav a {
+  padding-left: 5px;
+  align-items: center;
+  display: flex;
 }
 section.contentbox > article footer {
   text-align: center;
@@ -3534,21 +3532,21 @@ div.messagebox_details {
   overflow: hidden;
 }
 div.messagebox_info {
-  color: #000;
+  color: #000000;
   background-color: white;
   background-image: url("../images/messagebox/info.png");
   background-size: 32px 32px;
   border-color: #28497c;
 }
 div.messagebox_success {
-  color: #000;
+  color: #000000;
   background-color: white;
   background-image: url("../images/messagebox/success.png");
   background-size: 32px 32px;
   border-color: #008512;
 }
 div.messagebox_error {
-  color: #000;
+  color: #000000;
   background-color: white;
   background-image: url("../images/messagebox/error.png");
   background-size: 32px 32px;
@@ -3785,7 +3783,7 @@ input.quicksearchbox {
   max-height: 275px;
   overflow-y: auto;
   overflow-x: hidden;
-  z-index: 2;
+  z-index: 99999;
 }
 .extendedLayout .ui-menu-item {
   white-space: nowrap;
@@ -3956,7 +3954,7 @@ div.clear {
   width: 0;
   position: absolute;
   pointer-events: none;
-  border-top-color: #ccc;
+  border-top-color: #cccccc;
   top: 100%;
   left: 50%;
   margin-left: -9px;
@@ -3968,7 +3966,7 @@ div.clear {
   width: 0;
   position: absolute;
   pointer-events: none;
-  border-top-color: #ddd;
+  border-top-color: #dddddd;
   top: 100%;
   left: 50%;
   margin-left: -8px;
@@ -4050,7 +4048,7 @@ div.clear {
   width: 0;
   position: absolute;
   pointer-events: none;
-  border-top-color: #ccc;
+  border-top-color: #cccccc;
   top: 100%;
   left: 50%;
   margin-left: -9px;
@@ -4062,7 +4060,7 @@ div.clear {
   width: 0;
   position: absolute;
   pointer-events: none;
-  border-top-color: #ddd;
+  border-top-color: #dddddd;
   top: 100%;
   left: 50%;
   margin-left: -8px;
@@ -4199,11 +4197,11 @@ div.clear {
 }
 .js .drag-and-drop.hovered {
   background-color: #fff8e0;
-  background-image: -moz-linear-gradient(top, #ffe, #fec);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffe), to(#fec));
-  background-image: -webkit-linear-gradient(top, #ffe, #fec);
-  background-image: -o-linear-gradient(top, #ffe, #fec);
-  background-image: linear-gradient(to bottom, #ffe, #fec);
+  background-image: -moz-linear-gradient(top, #ffffee, #ffeecc);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffee), to(#ffeecc));
+  background-image: -webkit-linear-gradient(top, #ffffee, #ffeecc);
+  background-image: -o-linear-gradient(top, #ffffee, #ffeecc);
+  background-image: linear-gradient(to bottom, #ffffee, #ffeecc);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffee', endColorstr='#ffffeecc', GradientType=0);
   border-radius: 1em;
@@ -4521,7 +4519,7 @@ table.calendar-week tbody tr td.calendar-category2,
 table.calendar-day tbody tr td.calendar-category2,
 table.calendar-week tbody tr td.calendar-course-category1,
 table.calendar-day tbody tr td.calendar-course-category1 {
-  background: linear-gradient(to right, #3E4490, #7379A9) repeat-x #3E4490;
+  background: linear-gradient(to right, #3e4490, #7379a9) repeat-x #3e4490;
   border: solid 1px #682c8b;
   vertical-align: top;
   font-size: 11px;
@@ -4539,7 +4537,7 @@ table.calendar-week tbody tr td.calendar-category3,
 table.calendar-day tbody tr td.calendar-category3,
 table.calendar-week tbody tr td.calendar-course-category2,
 table.calendar-day tbody tr td.calendar-course-category2 {
-  background: linear-gradient(to right, #874293, #AE77B8) repeat-x #874293;
+  background: linear-gradient(to right, #874293, #ae77b8) repeat-x #874293;
   border: solid 1px #b02e7c;
   vertical-align: top;
   font-size: 11px;
@@ -4557,7 +4555,7 @@ table.calendar-week tbody tr td.calendar-category4,
 table.calendar-day tbody tr td.calendar-category4,
 table.calendar-week tbody tr td.calendar-course-category3,
 table.calendar-day tbody tr td.calendar-course-category3 {
-  background: linear-gradient(to right, #8FAD29, #A3BA50) repeat-x #8FAD29;
+  background: linear-gradient(to right, #8fad29, #a3ba50) repeat-x #8fad29;
   border: solid 1px #129c94;
   vertical-align: top;
   font-size: 11px;
@@ -4575,7 +4573,7 @@ table.calendar-week tbody tr td.calendar-category5,
 table.calendar-day tbody tr td.calendar-category5,
 table.calendar-week tbody tr td.calendar-course-category4,
 table.calendar-day tbody tr td.calendar-course-category4 {
-  background: linear-gradient(to right, #8E8EB2, #BABAD4) repeat-x #8E8EB2;
+  background: linear-gradient(to right, #8e8eb2, #babad4) repeat-x #8e8eb2;
   border: solid 1px #f26e00;
   vertical-align: top;
   font-size: 11px;
@@ -4593,7 +4591,7 @@ table.calendar-week tbody tr td.calendar-category6,
 table.calendar-day tbody tr td.calendar-category6,
 table.calendar-week tbody tr td.calendar-course-category6,
 table.calendar-day tbody tr td.calendar-course-category6 {
-  background: linear-gradient(to right, #904E42, #B5867E) repeat-x #904E42;
+  background: linear-gradient(to right, #904e42, #b5867e) repeat-x #904e42;
   border: solid 1px #a85d45;
   vertical-align: top;
   font-size: 11px;
@@ -4609,7 +4607,7 @@ table.calendar-day tbody tr td.calendar-course-category6 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-category7,
 table.calendar-day tbody tr td.calendar-category7 {
-  background: linear-gradient(to right, #AB9448, #C9B988) repeat-x #AB9448;
+  background: linear-gradient(to right, #ab9448, #c9b988) repeat-x #ab9448;
   border: solid 1px #6ead10;
   vertical-align: top;
   font-size: 11px;
@@ -4623,7 +4621,7 @@ table.calendar-day tbody tr td.calendar-category7 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-category8,
 table.calendar-day tbody tr td.calendar-category8 {
-  background: linear-gradient(to right, #6D9441, #9DB97C) repeat-x #6D9441;
+  background: linear-gradient(to right, #6d9441, #9db97c) repeat-x #6d9441;
   border: solid 1px #d60000;
   vertical-align: top;
   font-size: 11px;
@@ -4637,7 +4635,7 @@ table.calendar-day tbody tr td.calendar-category8 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-category9,
 table.calendar-day tbody tr td.calendar-category9 {
-  background: linear-gradient(to right, #EBC443, #ECD379) repeat-x #EBC443;
+  background: linear-gradient(to right, #ebc443, #ecd379) repeat-x #ebc443;
   border: solid 1px #ffbd33;
   vertical-align: top;
   font-size: 11px;
@@ -4651,7 +4649,7 @@ table.calendar-day tbody tr td.calendar-category9 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-category10,
 table.calendar-day tbody tr td.calendar-category10 {
-  background: linear-gradient(to right, #DB9F63, #E9B583) repeat-x #DB9F63;
+  background: linear-gradient(to right, #db9f63, #e9b583) repeat-x #db9f63;
   border: solid 1px #66b671;
   vertical-align: top;
   font-size: 11px;
@@ -4665,7 +4663,7 @@ table.calendar-day tbody tr td.calendar-category10 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-category11,
 table.calendar-day tbody tr td.calendar-category11 {
-  background: linear-gradient(to right, #90D070, #A6D98C) repeat-x #90D070;
+  background: linear-gradient(to right, #90d070, #a6d98c) repeat-x #90d070;
   border: solid 1px #a480b9;
   vertical-align: top;
   font-size: 11px;
@@ -4679,7 +4677,7 @@ table.calendar-day tbody tr td.calendar-category11 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-category12,
 table.calendar-day tbody tr td.calendar-category12 {
-  background: linear-gradient(to right, #418494, #6CA6B2) repeat-x #418494;
+  background: linear-gradient(to right, #418494, #6ca6b2) repeat-x #418494;
   border: solid 1px #d082b0;
   vertical-align: top;
   font-size: 11px;
@@ -4757,7 +4755,7 @@ table.calendar-day tbody tr td.calendar-course-category255 div:first-child {
 }
 table.calendar-week tbody tr td.calendar-course-category256,
 table.calendar-day tbody tr td.calendar-course-category256 {
-  background: linear-gradient(to right, #3E4490, #7379A9) repeat-x #3E4490;
+  background: linear-gradient(to right, #3e4490, #7379a9) repeat-x #3e4490;
   border: solid 1px #2D2C64;
   vertical-align: top;
   font-size: 11px;
@@ -4830,7 +4828,7 @@ a.Calendar-course-event-text255 {
   font-size: 0.8em;
 }
 .calendar-group-events {
-  background: linear-gradient(to right, #8E8EB2, #BABAD4) repeat-x #8E8EB2;
+  background: linear-gradient(to right, #8e8eb2, #babad4) repeat-x #8e8eb2;
   border: solid 1px #505064;
 }
 #exc-dates {
@@ -6320,10 +6318,18 @@ div.available-widgets .studip-widget {
   vertical-align: top;
 }
 .pagination .prev a {
-  background-image: url("../images/icons/16/blue/arr_1left.png");
+  background-image: url("../images/icons/blue/arr_1left.svg");
+  -webkit-background-size: 16px 16px;
+  -moz-background-size: 16px 16px;
+  -o-background-size: 16px 16px;
+  background-size: 16px 16px;
 }
 .pagination .next a {
-  background-image: url("../images/icons/16/blue/arr_1right.png");
+  background-image: url("../images/icons/blue/arr_1right.svg");
+  -webkit-background-size: 16px 16px;
+  -moz-background-size: 16px 16px;
+  -o-background-size: 16px 16px;
+  background-size: 16px 16px;
 }
 #rulelist div.admissionrule {
   display: list-item;
@@ -6997,9 +7003,9 @@ div#studyareas {
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   border-radius: 20px;
-  -webkit-box-shadow: 0 -1px 4px rgba(214, 0, 0, 0.1), 0 2px 5px #888;
-  -moz-box-shadow: 0 -1px 4px rgba(214, 0, 0, 0.1), 0 2px 5px #888;
-  box-shadow: 0 -1px 4px rgba(214, 0, 0, 0.1), 0 2px 5px #888;
+  -webkit-box-shadow: 0 -1px 4px rgba(214, 0, 0, 0.1), 0 2px 5px #888888;
+  -moz-box-shadow: 0 -1px 4px rgba(214, 0, 0, 0.1), 0 2px 5px #888888;
+  box-shadow: 0 -1px 4px rgba(214, 0, 0, 0.1), 0 2px 5px #888888;
 }
 .smiley-picker .navigation {
   border-collapse: collapse;
