message boxes: add new type 'warning', fixes #6586

--- a/public/assets/stylesheets/less/messagebox.less
+++ b/public/assets/stylesheets/less/messagebox.less
@@ -72,11 +72,11 @@ div.messagebox_details {
     }
 }
 
-.messagebox(info,      #000,    white,      @base-color);
-.messagebox(success,   #000,    white,      @dark-green);
-.messagebox(error,     #000,    white,      @red);
-.messagebox(exception, @red,    @red-20,    @red);
-.messagebox(warning,   @orange, @yellow-60, @yellow-80, 'advice');
+.messagebox(info,      #000, white,   @base-color);
+.messagebox(success,   #000, white,   @dark-green);
+.messagebox(error,     #000, white,   @red);
+.messagebox(exception, @red, @red-20, @red);
+.messagebox(warning,   #000, white,   @yellow-60, 'advice');
 
 // Define modal messagebox
 .modaloverlay {
