--- a/public/assets/stylesheets/less/admin.less
+++ b/public/assets/stylesheets/less/admin.less
@@ -2,7 +2,7 @@
 .js .drag-and-drop {
     border: 1px dotted #888;
     display: block;
-    margin: 0 1em 0 0;
+    margin: 0 20px 0 0;
     overflow: hidden;
     padding: 1em;
     position: relative;
