refine border color for start-widgets refs #6592 (always check the branch before)

--- a/public/assets/stylesheets/less/start.less
+++ b/public/assets/stylesheets/less/start.less
@@ -17,7 +17,7 @@
 }
 
 .studip-widget {
-    border: 1px solid @base-color-20;
+    border: 1px solid @brand-color-darker;
 
     .widget-header {
         .box-sizing(border-box);
