--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -6057,7 +6057,7 @@ a.bookable_rooms_action {
   padding: 0;
 }
 .studip-widget {
-  border: 1px solid #d4dbe5;
+  border: 1px solid #1f4171;
 }
 .studip-widget .widget-header {
   -webkit-box-sizing: border-box;
