--- a/public/assets/stylesheets/less/tables.less
+++ b/public/assets/stylesheets/less/tables.less
@@ -186,6 +186,12 @@ td.tree-elbow-line, td.tree-elbow-end {
     .gruppe5, .gruppe6, .gruppe7, .gruppe9 {
         width: 1px;
     }
+    .mycourse_elements > img {
+        display: none;
+    }
+    .special_nav {
+        float: right;
+    }
 }
 
 .grey      { background: #bbb none; }
