tables: fix hiding of adjacent cells after .toggle-indicator, introduce .dont-hide to force display, fixes #6491

--- a/public/assets/stylesheets/less/tables.less
+++ b/public/assets/stylesheets/less/tables.less
@@ -145,23 +145,14 @@ td.tree-elbow-line, td.tree-elbow-end {
         tr:not(.header-row) {
             display: none;
         }
-        .toggle-indicator ~ * {
+        .toggle-indicator ~ *:not(.dont-hide) {
             overflow: hidden;
-            text-indent: -100%;
+            text-indent: -200%;
         }
     }
 }
 * + html .collapsable .collapsed .header-row { display: inline-block !important; } // IE-Hack
 
-/* Special treatment for group headers under my courses */
-/* -> see https://develop.studip.de/trac/ticket/6491    */
-// .mycourses {
-//     > .collapsed {
-//         .toggle-indicator ~ * {
-//             text-indent: 0;
-//         }
-//     }
-// }
 /* --- Table details -------------------------------------------------------- */
 .loaded-details {
     > td { padding: 0 20px 5px 20px !important; }
