--- a/public/assets/stylesheets/less/responsive.less
+++ b/public/assets/stylesheets/less/responsive.less
@@ -219,6 +219,10 @@ label[for="responsive-toggle"] {
         min-width: inherit !important;
     }
 
+    #layout_content {
+        margin: 0px 4px;
+    }
+
     .visible-sidebar {
         right: 0 !important;
         .transition(right 300ms);
