--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -51,6 +51,7 @@
 @import "less/wiki.less";
 @import "less/raumzeit.less";
 @import "less/opengraph.less";
+@import "less/statusgroups.less";
 @import "less/start.less";
 
 @import "less/mobile.less";
