--- a/public/assets/stylesheets/less/messages.less
+++ b/public/assets/stylesheets/less/messages.less
@@ -75,3 +75,9 @@ a.message-tag {
     margin: 3px;
     padding: 10px;
 }
+
+.responsive_author {
+  margin: 0;
+  font-size: 0.8em;
+  color: @base-gray;
+}
