--- a/public/assets/stylesheets/less/content_box.less
+++ b/public/assets/stylesheets/less/content_box.less
@@ -33,7 +33,9 @@ section.contentbox {
             align-items: center;
         }
     }
-    
+    *:empty {
+        display: none !important;
+    }
     footer {
         text-align: center;
         border-color: @content-color-40;
