contentboxes: restrict hiding of element to footer since a generic *:empty will hide inputs and other element with no content as well, re #6604

--- a/public/assets/stylesheets/less/content_box.less
+++ b/public/assets/stylesheets/less/content_box.less
@@ -33,7 +33,7 @@ section.contentbox {
             align-items: center;
         }
     }
-    *:empty {
+    footer:empty {
         display: none !important;
     }
     footer {
