refine [38342] according to ticket discussion refs #6592

--- a/public/assets/stylesheets/less/start.less
+++ b/public/assets/stylesheets/less/start.less
@@ -17,7 +17,7 @@
 }
 
 .studip-widget {
-    border: 1px solid @brand-color-darker;
+    border: 1px solid @base-color-20;
 
     .widget-header {
         .box-sizing(border-box);
@@ -48,6 +48,9 @@
     }
 }
 
+.studip-widget:hover {
+    border: 1px solid @brand-color-darker; 
+}
 #widget_choices{
     border-right: 1px dashed @brand-color-darker;
     margin-right: 25px;
